<resources>
    <string name="app_name">DealApplication</string>
    <string name="search_title">Search by location</string>
    <string name="category_title">Choose Category</string>
    <string name="app_version">Version %1$s</string>
    <string name="success_avail_offer">Hurray! \n You have successfully availed this offer.</string>
    <string name="text_loader">Loading...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty">""</string>
    <string name="no_coupon_available_text">No Coupons Available</string>
    <string name="continue_text">Continue</string>

    <!--Register Screen -->
    <string name="hint_email_address">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_register">REGISTER</string>

    <!-- Sign In Screen -->
    <string name="btn_signin">SIGN IN</string>

    <!-- Settings Screen -->
    <string name="version_information">Version %1$s</string>
    <string name="user">User: %1$s</string>
    <string name="push_notifications">Notifications</string>
    <string name="push_notifications_subtext">With notifications enabled you will be notified when your reservation is updated</string>
    <string name="select_language">Select Language</string>
    <string name="unregister">Unregister</string>
    <string name="unregister_confirmation">Are you sure you want to unregister?</string>
    <string name="select_location">Select/Change location</string>

    <!-- Location Option Dialog -->
    <string name="current_location_text">Use current location</string>
    <string name="set_location_text">Set location</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="new_delhi">New Delhi</string>
    <string name="noida">Noida</string>
    <string name="bangalore">Bangalore</string>

    <!-- Error Messages -->
    <string name="error_invalid_email_address">Enter valid email address</string>
    <string name="error_password_not_matching">Passwords are not matching</string>
    <string name="error_authentication_failed">Authentication failed. Please try again later</string>
    <string name="error_registration_failed">Registration failed. Please try again later</string>
    <string name="error_invalid_password">Please enter valid Password</string>
    <string name="error_location_permission_denied">Location permission has been denied by the user</string>



</resources>
