<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/gurgaonLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/gurgaon">

        </android.support.v7.widget.AppCompatRadioButton>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/delhiLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/new_delhi"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noidaLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/noida"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/bangaloreLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/bangalore">

        </android.support.v7.widget.AppCompatRadioButton>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/status_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/ok_action"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
